Fix alignment

--- a/src/Components/Cards/Journal/Text/index.less
+++ b/src/Components/Cards/Journal/Text/index.less
@@ -4,8 +4,6 @@
     position: relative;
     text-align: center;
 
-margin : 3%;
-
     h1 {
         font-size: 140%;
     }
